--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(leetcode_2022)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(leetcode_2022 stack-queue/225.cpp)
+add_executable(leetcode_2022 linked-list/445.cpp linked-list/234.cpp)
