--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(leetcode_2022)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(leetcode_2022 python-interview/diff-ways-to-compute.cpp)
+add_executable(leetcode_2022 python-interview/valid_stack_seq.cpp)
